Fix svg bug on iPhone5.

--- a/source/stylesheets/modules/_m-start-your-project.scss
+++ b/source/stylesheets/modules/_m-start-your-project.scss
@@ -28,6 +28,8 @@
   }
 
   .station {
+    @include size(100px, 132px);
+
     bottom: -5px;
     position: absolute;
   }
